# SBC

./: run_ros2.sh  setup_ros2.sh
python/: lidar_reader.py  main.py
ros2/src/delivery_sensor/: package.xml  setup.py
ros2/src/delivery_sensor/config/: delivery_sensor.rviz
ros2/src/delivery_sensor/delivery_sensor/lib/: config.py
ros2/src/delivery_sensor/delivery_sensor/nodes/: obstacle_detector_node.py  ultrasonic_node.py
ros2/src/delivery_sensor/launch/: full_system.launch.py
